--- a/src/components/BatQuestions/BatQuestions.css
+++ b/src/components/BatQuestions/BatQuestions.css
@@ -1,3 +1,8 @@
-.--batQuestions-title{
-    color:red;
+.--batQuestions-btn{
+    margin:.5em 0;
+}
+
+.--bat-qa{
+    margin-top:1.25em;
+    font-size:2rem;
 }
